--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
         <div class="container">
           <h2 class="about-section-main">Чим ми займаємося</h2>
           <ul class="list feature-list-about">
+
+            <div class="thumb">
             <li class="item">
               <img
                 src="./images/img_1_sq.jpg"
@@ -147,6 +149,10 @@
                 height="294"
               />
             </li>
+                  <p class="label">Десктопні додатки</p>
+                  </div>
+
+            <div class="thumb">
             <li class="item">
               <img
                 src="./images/img_2_sq.jpg"
@@ -155,6 +161,10 @@
                 height="294"
               />
             </li>
+                <p class="label">Мобільні додатки</p>
+                </div>
+
+            <div class="thumb">
             <li class="item">
               <img
                 src="./images/img_3_sq.jpg"
@@ -163,6 +173,9 @@
                 height="294"
               />
             </li>
+              <p class="label">Дизайнерські рішення</p>
+              </div>
+
           </ul>
         </div>
       </section>
