--- a/portfolio.html
+++ b/portfolio.html
@@ -100,29 +100,49 @@
 
           <ul class="list flex-list">
             <li class="flex-element item">
-              <a class="link" href="#">
-                <img
-                  src="./images/portfolio/img_1sq.jpg"
-                  alt="Відкритий ноутбук"
-                  width="370"
-                  height="294"
-                />
+                      <div class="portfolio-wrap">                      
+                          <div class="image-thumb">
+                            <a class="link" href="#">            
+                              <img
+                                src="./images/portfolio/img_1sq.jpg"
+                                alt="Відкритий ноутбук"
+                                width="370"
+                                height="294"
+                                /> 
+                        
+                                <div class="overlay-portfolio">
+                                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                          сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                          компанію чи приватну особу.
+                                </p>
+                            </div>
+                            </a>
+                          </div>
 
-                <div class="border-container">
-                  <h2 class="portfolio-title portfolio-padding">Технокряк</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
-                </div>
-              </a>
+                      <div class="border-container">
+                      <h2 class="portfolio-title portfolio-padding">Технокряк</h2>
+                      <p class="portfolio-text">Веб-сайт</p>
+                      </div>
             </li>
 
             <li class="flex-element item">
-              <a class="link" href="#">
-                <img
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
+                  <a class="link" href="#">
+                  <img
                   src="./images/portfolio/img_2sq.jpg"
                   alt="Постер три баскетболісти"
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
@@ -130,10 +150,11 @@
                   </h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
-              </a>
             </li>
 
             <li class="flex-element item">
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
               <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_3sq.jpg"
@@ -141,17 +162,26 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
                     Ресторан <span lang="en">Seafood</span>
                   </h2>
                   <p class="portfolio-text">Додаток</p>
-                </div>
-              </a>
+                </div>            
             </li>
 
             <li class="flex-element item">
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
               <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_4sq.jpg"
@@ -159,6 +189,14 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
@@ -166,10 +204,11 @@
                   </h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
-              </a>
             </li>
 
             <li class="flex-element item">
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
               <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_5sq.jpg"
@@ -177,6 +216,14 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
@@ -184,10 +231,11 @@
                   </h2>
                   <p class="portfolio-text">Додаток</p>
                 </div>
-              </a>
             </li>
 
             <li class="flex-element item">
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
               <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_6sq.jpg"
@@ -195,6 +243,14 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
@@ -202,10 +258,11 @@
                   </h2>
                   <p class="portfolio-text">Веб-сайт</p>
                 </div>
-              </a>
             </li>
 
             <li class="flex-element item">
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
               <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_7sq.jpg"
@@ -213,6 +270,14 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
@@ -220,10 +285,11 @@
                   </h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
-              </a>
             </li>
 
             <li class="flex-element item">
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
               <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_8sq.jpg"
@@ -231,6 +297,14 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
@@ -238,10 +312,11 @@
                   </h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
-              </a>
             </li>
 
             <li class="flex-element item">
+              <div class="portfolio-wrap">
+                <div class="image-thumb">
               <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_9sq.jpg"
@@ -249,6 +324,14 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay-portfolio">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                    компанію чи приватну особу.
+                  </p>
+                </div>
+                </a>
+                </div>
 
                 <div class="border-container">
                   <h2 class="portfolio-title">
@@ -256,7 +339,6 @@
                   </h2>
                   <p class="portfolio-text">Додаток</p>
                 </div>
-              </a>
             </li>
           </ul>
         </div>
