--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
           >
 
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link current">Студія</a></li>
+            <li class="item">
+              <a href="./index.html" class="link current">Студія</a>
+            </li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфоліо</a>
             </li>
-            <li class="item"><a href="./index.html" class="link">Контакти</a></li>
+            <li class="item">
+              <a href="./index.html" class="link">Контакти</a>
+            </li>
           </ul>
         </nav>
 
@@ -65,22 +69,21 @@
             Ефективні рішення для <br />
             вашого бізнесу
           </h1>
-          <button type="button" class="button primary" data-modal-open>Замовити послугу</button>
+          <button type="button" class="button primary" data-modal-open>
+            Замовити послугу
+          </button>
         </div>
       </section>
 
-      <div class="backdrop is-hidden" data-modal> 
-        <div class="modal"> 
-          <button data-modal-close class="modal-btn-close" >
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button data-modal-close class="modal-btn-close">
             <svg class="modal-close" width="30" height="30">
               <use href="./images/icons.svg#icon-close-1"></use>
-          </svg>
-        </button>
+            </svg>
+          </button>
         </div>
       </div>
-                
-               
-
 
       <!--Section 2-->
       <section class="about-section-advantage">
@@ -152,43 +155,41 @@
         <div class="container">
           <h2 class="about-section-main">Чим ми займаємося</h2>
           <ul class="list feature-list-about">
-
-            <div class="thumb">
             <li class="item">
-              <img
-                src="./images/img_1_sq.jpg"
-                alt="Людина_вводить_текст_на_клавіатурі"
-                width="370"
-                height="294"
-              />
-            </li>
-                  <p class="label">Десктопні додатки</p>
-                  </div>
-
-            <div class="thumb">
-            <li class="item">
-              <img
-                src="./images/img_2_sq.jpg"
-                alt="Людина_порівнює_дизайн_шаблону_на_телефоні"
-                width="370"
-                height="294"
-              />
-            </li>
-                <p class="label">Мобільні додатки</p>
-                </div>
-
-            <div class="thumb">
-            <li class="item">
-              <img
-                src="./images/img_3_sq.jpg"
-                alt="Людина_вибирає_колір_на_планшеті"
-                width="370"
-                height="294"
-              />
-            </li>
-              <p class="label">Дизайнерські рішення</p>
+              <div class="thumb">
+                <img
+                  src="./images/img_1_sq.jpg"
+                  alt="Людина_вводить_текст_на_клавіатурі"
+                  width="370"
+                  height="294"
+                />
+                <p class="label">Десктопні додатки</p>
               </div>
+            </li>
 
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/img_2_sq.jpg"
+                  alt="Людина_порівнює_дизайн_шаблону_на_телефоні"
+                  width="370"
+                  height="294"
+                />
+                <p class="label">Мобільні додатки</p>
+              </div>
+            </li>
+
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/img_3_sq.jpg"
+                  alt="Людина_вибирає_колір_на_планшеті"
+                  width="370"
+                  height="294"
+                />
+                <p class="label">Дизайнерські рішення</p>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -388,7 +389,7 @@
         </div>
       </section>
 
-      <!- SECTION 5 ------->
+                     <!--SECTION 5-->
 
       <section class="about-section-clients">
         <div class="container">
