--- a/index.html
+++ b/index.html
@@ -155,39 +155,39 @@
         <div class="container">
           <h2 class="about-section-main">Чим ми займаємося</h2>
           <ul class="list feature-list-about">
-            <li class="item">
-              <div class="thumb">
+            <li class="item thumb">             
                 <img
                   src="./images/img_1_sq.jpg"
                   alt="Людина_вводить_текст_на_клавіатурі"
                   width="370"
                   height="294"
                 />
-                <p class="label">Десктопні додатки</p>
+                <div class="label">
+                <p>Десктопні додатки</p>
               </div>
             </li>
 
-            <li class="item">
-              <div class="thumb">
+            <li class="item thumb">
                 <img
                   src="./images/img_2_sq.jpg"
                   alt="Людина_порівнює_дизайн_шаблону_на_телефоні"
                   width="370"
                   height="294"
                 />
-                <p class="label">Мобільні додатки</p>
+                <div class="label">
+                  <p>Мобільні додатки</p>
               </div>
             </li>
 
-            <li class="item">
-              <div class="thumb">
+            <li class="item thumb">
                 <img
                   src="./images/img_3_sq.jpg"
                   alt="Людина_вибирає_колір_на_планшеті"
                   width="370"
                   height="294"
                 />
-                <p class="label">Дизайнерські рішення</p>
+                <div class="label">
+                <p>Дизайнерські рішення</p>
               </div>
             </li>
           </ul>
