--- a/portfolio.html
+++ b/portfolio.html
@@ -100,29 +100,27 @@
 
           <ul class="list flex-list">
             <li class="flex-element item">
-                      <div class="portfolio-wrap">                      
-                          <div class="image-thumb">
-                            <a class="link" href="#">            
+                      <a class="link portfolio-link" href="#">
+                          <div class="image-thumb">                                     
                               <img
                                 src="./images/portfolio/img_1sq.jpg"
                                 alt="Відкритий ноутбук"
                                 width="370"
                                 height="294"
-                                /> 
-                        
+                                />  
                                 <div class="overlay-portfolio">
                                 <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                           сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                           компанію чи приватну особу.
                                 </p>
                             </div>
-                            </a>
                           </div>
-
+                        
                       <div class="border-container">
                       <h2 class="portfolio-title portfolio-padding">Технокряк</h2>
                       <p class="portfolio-text">Веб-сайт</p>
                       </div>
+                      </a>
             </li>
 
             <li class="flex-element item">
