--- a/portfolio.html
+++ b/portfolio.html
@@ -124,9 +124,8 @@
             </li>
 
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-                  <a class="link" href="#">
                   <img
                   src="./images/portfolio/img_2sq.jpg"
                   alt="Постер три баскетболісти"
@@ -139,21 +138,20 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
-                </div>
-
+              </div>                         
                 <div class="border-container">
                   <h2 class="portfolio-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
+                </a>
             </li>
 
+
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-              <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_3sq.jpg"
                   alt="Логотип ресторану морепродуктів"
@@ -166,7 +164,7 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
+              
                 </div>
 
                 <div class="border-container">
@@ -174,13 +172,13 @@
                     Ресторан <span lang="en">Seafood</span>
                   </h2>
                   <p class="portfolio-text">Додаток</p>
-                </div>            
+                </div> 
+                </a>
             </li>
 
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-              <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_4sq.jpg"
                   alt="Чорні навушники"
@@ -193,7 +191,6 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
                 </div>
 
                 <div class="border-container">
@@ -202,12 +199,12 @@
                   </h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
+              </a>
             </li>
 
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-              <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_5sq.jpg"
                   alt="Одна біла та одна коричнева коробки"
@@ -220,7 +217,6 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
                 </div>
 
                 <div class="border-container">
@@ -229,12 +225,12 @@
                   </h2>
                   <p class="portfolio-text">Додаток</p>
                 </div>
+                </a>
             </li>
 
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-              <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_6sq.jpg"
                   alt="Настільний монітор"
@@ -247,7 +243,6 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
                 </div>
 
                 <div class="border-container">
@@ -256,12 +251,12 @@
                   </h2>
                   <p class="portfolio-text">Веб-сайт</p>
                 </div>
+                </a>            
             </li>
 
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-              <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_7sq.jpg"
                   alt="Відкритий журнал"
@@ -274,7 +269,6 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
                 </div>
 
                 <div class="border-container">
@@ -283,12 +277,12 @@
                   </h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
+              </a>
             </li>
 
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-              <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_8sq.jpg"
                   alt="Білий паперовий тег"
@@ -301,7 +295,6 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
                 </div>
 
                 <div class="border-container">
@@ -310,12 +303,12 @@
                   </h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
+              </a>
             </li>
 
             <li class="flex-element item">
-              <div class="portfolio-wrap">
+              <a class="link portfolio-link" href="#">
                 <div class="image-thumb">
-              <a class="link" href="#">
                 <img
                   src="./images/portfolio/img_9sq.jpg"
                   alt="Людина друкує на ноутбуці"
@@ -328,7 +321,6 @@
                     компанію чи приватну особу.
                   </p>
                 </div>
-                </a>
                 </div>
 
                 <div class="border-container">
@@ -337,6 +329,7 @@
                   </h2>
                   <p class="portfolio-text">Додаток</p>
                 </div>
+              </a>
             </li>
           </ul>
         </div>
